<resources>
    <string name="app_name">FriendFinder</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="write_a_message">Write a Message ...</string>
    <string name="send">Send</string>
    <string name="login">Log In</string>
    <string name="auth_failed">auth failed</string>
    <string name="drawer_open">drawer opened</string>
    <string name="drawer_close">drawer closed</string>
    <string-array name="array_address">
        <item>Any City</item>
        <item>Kathmandu</item>
        <item>Bhaktapur</item>
        <item>Lalitpur</item>
        <item>Banepa</item>
        <item>Thimi</item>
        <item>Sankhu</item>
        <item>Kritipur</item>
    </string-array>
    <string-array name="array_gender">
        <item>Any Gender</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string-array name="drawer_title_list">
        <item>My Profile</item>
        <item>Search Friends</item>
        <item>Sign Out</item>

    </string-array>

</resources>
