<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">

        <TextView
            android:text="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etUserName" />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword" />
        <TextView
            android:text="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etConfirmPassword" />

        <Button
            android:text="SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_blue_selector"
            android:id="@+id/btSignUp" />
    </LinearLayout>

</layout>